// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`component - wechat > basic opt 1`] = `
"{
  \\"properties\\": {
    \\"ss\\": {
      \\"type\\": \\"[function String]\\",
      \\"value\\": \\"ssabc\\"
    },
    \\"value\\": {
      \\"type\\": \\"[function Number]\\",
      \\"value\\": 1234
    },
    \\"bbb\\": {
      \\"type\\": \\"[function Boolean]\\",
      \\"value\\": true
    },
    \\"aaa\\": {
      \\"type\\": \\"[function Array]\\",
      \\"value\\": [
        \\"1\\",
        2,
        true
      ]
    },
    \\"oo\\": {
      \\"type\\": \\"[function Object]\\",
      \\"value\\": {}
    }
  },
  \\"data\\": {
    \\"foo\\": \\"long-content\\"
  },
  \\"observers\\": {
    \\"ss, value, bbb, aaa, oo\\": \\"[function ss, value, bbb, aaa, oo]\\"
  },
  \\"lifetimes\\": {
    \\"created\\": \\"[function ]\\",
    \\"detached\\": \\"[function ]\\"
  },
  \\"methods\\": {}
}"
`;

exports[`component - wechat > 测试自制的 mount 1`] = `
{
  "bar": 0,
  "bbloon": false,
  "ddd": "aaa",
  "foo": "abc",
}
`;

exports[`component - wechat > 测试自制的 mount 2`] = `
{
  "bar": 123,
  "bbloon": false,
  "ddd": "aaa",
  "foo": "abc",
}
`;

exports[`component - wechat > 测试自制的 mount 3`] = `
{
  "bar": 123,
  "bbloon": false,
  "ddd": "2222",
  "foo": "abc",
}
`;
